[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Placeholder/TD3_0032_Package-----------------.png" type="Texture" id=1]
[ext_resource path="res://Upgrades/OrbSpawners/FiveRoundsRapidOrbSpawner/FiveRoundsRapid.gd" type="Script" id=2]
[ext_resource path="res://Upgrades/OrbSpawners/FiveRoundsRapidOrbSpawner/TurretProjectile.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Collapse"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_set_up_finished"
} ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 1000.29

[node name="FiveRoundsRapid" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
projectile = ExtResource( 3 )
projectile_speed = 4000.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -64, -24, -72, -24, -72, 24, -64, 24, -40, 40, -24, 40, 0, 40, 32, 16, 40, 8, 72, 8, 72, -8, 40, -8, 32, -16, 0, -40, -40, -40 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Collapse = SubResource( 1 )
anims/SetUp = SubResource( 2 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 3 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 80, 0 )

[node name="FiringCooldown" type="Timer" parent="."]

[node name="Lifespan" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="timeout" from="FiringCooldown" to="." method="_on_FiringCooldown_timeout"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
